# torch-engression

./: .gitignore  404.html  CLAUDE.md  INSTITUTIONAL_LEARNINGS.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: CI.yml  docs.yml
docs/: examples.md  index.md
examples/: index.html
nb/: benchmark.ipynb
search/: search_index.json
src/torch_engression/: __init__.py  engression.py  loss.py  models.py  utils.py
src/torch_engression/data/: loader.py  simulator.py
tests/: conftest.py  test_engression.py  test_loss.py  test_models.py
