[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch-engression"
version = "0.1.0"
description = "GPU-accelerated distributional regression via energy scores."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
]
keywords = ["distributional-regression", "pytorch", "gpu", "energy-score", "engression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/torch_engression"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests that require GPU",
]
